Split predicate library.

--- a/routing/CMakeLists.txt
+++ b/routing/CMakeLists.txt
@@ -27,13 +27,23 @@ pkg_check_modules(SPDLOG REQUIRED spdlog)
 # +------------------------------------------------------------+
 
 # No need to add libosmium explicitly because it is header only.
-add_library(extract_junction utils/extract_junction.cc)
+
+add_library(predicates utils/predicates.cc)
 target_link_libraries(
-  extract_junction
+  predicates
   ${BZIP2_LIBRARIES}
   ${ZLIB_LIBRARIES}
   ${EXPAT_LIBRARIES}
-  ${SPDLOG_LIBRARIES}
+  Threads::Threads)
+
+
+add_library(extract_junction utils/extract_junction.cc)
+target_link_libraries(
+  extract_junction
+  predicates
+  ${BZIP2_LIBRARIES}
+  ${ZLIB_LIBRARIES}
+  ${EXPAT_LIBRARIES}
   Threads::Threads)
 
 # +------------------------------------------------------------+
